# QTris

./: .env.example  .gitignore  CombinedHeadPretrainer.py  CombinedHeadTetrisModel.py  CombinedHeadTrainer.py  DebuggingNotebook.ipynb  GenerateMoves.py  Main.py  Manimation.py  Notebook.ipynb  OldTetrisEnv.py  PieceDisplay.npy  Player.py  PlayerSeparate.py  PlayerSeparateParallel.py  Pretrainer.py  Pretrainer_old.py  PyTrainer.py  README.md  RunDemo.py  TFTrainer_IP.py  TestMain.py  TestTetrisEnv.py  TetrisEnv.py  TetrisModel.py  TetrisModel_old.py  Trainer.py  TrainerSeparate.py  TrainerSeparateParallel.py  Trainer_old.py  collapse_plan.md  major_reqs.txt  notes.md  pyproject.toml  requirements.txt  setup.sh
Alpha/: action_space.py  blended_valuator.py  config.py  mcts.py  network.py  neural_valuator.py  replay_buffer.py  runner.py  self_play.py  train.py  trainer.py  tree.py  valuator.py  warm_start.py
Autoregressive/: ConvertDataset.py  DAggerGen.py  DataGen.py  DataGenFlat.py  PretrainFlat.py  Pretrainer.py  PyTetrisRunnerFlat.py  PyTrainer.py  PyTrainer1v1.py  PyTrainerCombined.py  PyTrainerFlat.py  RunDemo.py  RunDemo1v1.py  RunDemoFlat.py  RunDemoVS.py  TetrisModel.py  TetrisModelFlat.py
NewTetrisEnv/: test.py
Oneshot/: Pretrainer.py  PyTrainer.py  RunDemo.py  Runner.py  TetrisModel.py
TetrisEnv/: Py1v1TetrisRunner.py  Py1v1TetrisRunnerFlat.py  PyTetris1v1Env.py  PyTetrisEnv.py
leaderboard/: README.md  wrangler.toml
leaderboard/public/: index.html
old/: Main.py  Pretrainer.py
scripts/: measure_attack_dist.py  publish_leaderboard.py  run_1v1_az.sh  run_leaderboard_publisher.sh  sample_opener.py  trial_report.py
src/qtris/: config.py
src/qtris/cli/: datagen.py  demo.py  pretrain.py  train.py
src/qtris/data/: convert.py  dagger.py  gen_ar.py  gen_flat.py  gen_placement.py  placement_features.py
src/qtris/demo/: ar.py  ar_1v1.py  constants.py  flat.py  panels.py  placement.py  placement_1v1.py  rendering.py  utils.py  vs.py
src/qtris/mcp/: __init__.py  protocol.py  server.py
src/qtris/models/: base.py  encoders.py  value.py
src/qtris/nn/: attention.py  transformer.py
src/qtris/observability/: backend.py  models.py  wandb_backend.py
src/qtris/pretraining/: ar.py  base.py  flat.py  placement.py
src/qtris/runners/: flat.py  placement.py
src/qtris/search/: cmcts.py  (+2 more)
tests/: test_elo.py  test_pathfinder_softdrop.py  test_spawn_envelope_death.py
tetrisenv/: README.md  b2b_demo.py  b2b_test.py  setup.py
tetrisenv/TetrisEnv/: CB2BSearch.py  CKeySequences.py  Py1v1TetrisRunner.py  Py1v1TetrisRunnerFlat.py  PyTetris1v1Env.py  PyTetrisEnv.py  PyTetrisRunner.py  __init__.py  b2b_search.c  pathfinder.c  tf_vec_env.py
tools/: env_equivalence.py  env_golden_1v1.json  env_golden_single.json  vec_equivalence.py  vec_golden_single.json
(+23 files in other folders)
