[project]
name = "qtris"
version = "0.8.0"
description = "Vision Transformer for playing Modern Tetris"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "tensorflow[and-cuda]==2.15.1",
    "tetrisenv",
    "tf-agents==0.19.0",
    "tqdm>=4.67.3",
    "wandb>=0.19.11",
]

[project.scripts]
pretrain = "qtris.cli.pretrain:main"
train    = "qtris.cli.train:main"
demo     = "qtris.cli.demo:main"
datagen  = "qtris.cli.datagen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qtris"]

[tool.uv.sources]
tetrisenv = { git = "https://github.com/m-sher/TFTetrisEnv.git" }
