[project]
name = "qtris"
version = "0.8.0"
description = "Vision Transformer for playing Modern Tetris"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "imageio[ffmpeg]>=2.37.3",
    "pydantic>=1.10.26",
    "pygame-widgets>=1.3.2",
    "tensorflow[and-cuda]==2.15.1",
    "tetrisenv",
    # TODO: drop tf-agents dep - pins typing-extensions==4.5.0, blocks pydantic v2
    # + py3.12 + TF 2.18 upgrades (see notes.md "Dependency modernization").
    "tf-agents==0.19.0",
    "tqdm>=4.67.3",
    "wandb>=0.19.11",
]

[project.scripts]
pretrain = "qtris.cli.pretrain:main"
train    = "qtris.cli.train:main"
demo     = "qtris.cli.demo:main"
datagen  = "qtris.cli.datagen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qtris"]

[tool.uv.sources]
tetrisenv = { path = "tetrisenv", editable = true }

[tool.ruff]
extend-exclude = ["tetrisenv"]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "setuptools<81",
]
